# projet-calcul-parallel

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fonctions.f90  main.f90  main_parll.f90  makefile  mod_parallele.f90  second_membre_sparse.f90  syslin_parll.f90
src/: CMakeLists.txt  GradConj.cpp  GradConj.h  Input.cpp  Input.h  Input.hpp  functions.cpp  functions.h  main.cpp  output.cpp  output.h  second_membre.cpp  second_membre.h
src/math/: CMakeLists.txt  Mat.cpp  Mat.h  Sparse.cpp  Sparse.h  Vector.cpp  Vector.h
